--- a/app/src/main/res/layout-land/activity_esquecerpalavrapasse.xml
+++ b/app/src/main/res/layout-land/activity_esquecerpalavrapasse.xml
@@ -8,91 +8,92 @@
     tools:context=".ForgotPassword">
 
     <!-- Container para a imagem de fundo e o logo -->
-    <FrameLayout
-        android:id="@+id/frameLayout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <!-- Imagem de Fundo -->
-        <ImageView
-            android:id="@+id/backgroundImageView"
-            android:layout_width="280dp"
-            android:layout_height="250dp"
-            android:contentDescription="Background Image"
-            android:scaleType="centerCrop"
-            android:src="@drawable/bolastopo" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <!-- Logo -->
-        <ImageView
-            android:id="@+id/logoImageView"
-            android:layout_width="170dp"
-            android:layout_height="150dp"
-            android:layout_marginStart="8dp"
-            android:contentDescription="Logo"
-            android:src="@drawable/logo" />
-    </FrameLayout>
+            <FrameLayout
+                android:id="@+id/frameLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="0dp">
 
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="40dp"
-        android:text="Esqueci-me da minha palavra-passe"
-        android:textColor="@android:color/black"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/frameLayout" />
+                <!-- Imagem de Fundo -->
+                <ImageView
+                    android:id="@+id/backgroundImageView"
+                    android:layout_width="280dp"
+                    android:layout_height="250dp"
+                    android:contentDescription="Background Image"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/bolastopo" />
 
-    <TextView
-        android:id="@+id/email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
-        android:layout_marginTop="20dp"
-        android:text="Endereço de Email"
-        android:textColor="#616161"
-        android:textSize="12sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
+                <!-- Logo -->
+                <ImageView
+                    android:id="@+id/logoImageView"
+                    android:layout_width="170dp"
+                    android:layout_height="150dp"
+                    android:layout_marginStart="8dp"
+                    android:contentDescription="Logo"
+                    android:src="@drawable/logo" />
+            </FrameLayout>
+
+            <TextView
+                android:id="@+id/titleTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="40dp"
+                android:text="Esqueci-me da minha palavra-passe"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="25dp"
+                android:layout_marginTop="20dp"
+                android:text="Endereço de Email"
+                android:textColor="#616161"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/emailEditText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="25dp"
+                android:drawableEnd="@drawable/email"
+                android:inputType="textEmailAddress"
+                android:padding="12dp" />
+
+            <Button
+                android:id="@+id/sendButton"
+                android:layout_width="315dp"
+                android:layout_height="72dp"
+                android:layout_marginTop="30dp"
+                android:text="Enviar"
+                android:textAllCaps="false"
+                android:textColor="@color/white" />
+
+            <View
+                android:id="@+id/parentEnd"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                tools:ignore="MissingConstraints" />
+        </LinearLayout>
+    </ScrollView>
 
     <!-- Endereço de Email -->
-    <EditText
-        android:id="@+id/emailEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="25dp"
-        android:drawableEnd="@drawable/email"
-        android:inputType="textEmailAddress"
-        android:padding="12dp"
-        app:layout_constraintEnd_toStartOf="@+id/parentEnd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email" />
 
     <!-- Botão Enviar -->
-    <Button
-        android:id="@+id/sendButton"
-        android:layout_width="315dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="30dp"
-        android:text="Enviar"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toStartOf="@+id/parentEnd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/emailEditText" />
 
     <!-- Constraint para alinhar os elementos -->
-    <View
-        android:id="@+id/parentEnd"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
