--- a/app/src/main/res/layout-land/activity_home_page_user.xml
+++ b/app/src/main/res/layout-land/activity_home_page_user.xml
@@ -6,141 +6,152 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/navigation_home"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Header with gradient background -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/header"
-            android:layout_width="0dp"
-            android:layout_height="250dp"
-            android:background="@drawable/tab"
-            android:padding="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-            <!-- Menu Icon -->
-            <ImageView
-                android:id="@+id/menu_icon"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="40dp"
-                android:src="@drawable/menu"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/navigation_home"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <!-- User Profile Picture -->
-            <ImageView
-                android:id="@+id/profile_picture"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="22dp"
-                android:background="@drawable/profile"
-                android:clipToOutline="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/profile"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                <!-- Header with gradient background -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/header"
+                    android:layout_width="0dp"
+                    android:layout_height="250dp"
+                    android:background="@drawable/tab"
+                    android:padding="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            <!-- Greeting Message -->
-            <TextView
-                android:id="@+id/greeting_message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Boas {First/Last Name},"
-                android:textAlignment="center"
-                android:textColor="@android:color/white"
-                android:textSize="40sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/menu_icon"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintVertical_bias="0.5"/>
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    <!-- Menu Icon -->
+                    <ImageView
+                        android:id="@+id/menu_icon"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="40dp"
+                        android:src="@drawable/menu"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- List of Items -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_queimadas"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/header"
-            app:layout_constraintBottom_toTopOf="@id/extra_space_view"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+                    <!-- User Profile Picture -->
+                    <ImageView
+                        android:id="@+id/profile_picture"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="22dp"
+                        android:background="@drawable/profile"
+                        android:clipToOutline="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/profile"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- View at the bottom to create extra space -->
-        <View
-            android:id="@+id/extra_space_view"
-            android:layout_width="0dp"
-            android:layout_height="80dp"
-            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+                    <!-- Greeting Message -->
+                    <TextView
+                        android:id="@+id/greeting_message"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Boas {First/Last Name},"
+                        android:textAlignment="center"
+                        android:textColor="@android:color/white"
+                        android:textSize="40sp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/menu_icon"
+                        app:layout_constraintVertical_bias="0.5" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <!-- Bottom Navigation -->
-        <RelativeLayout
-            android:id="@+id/bottom_navigation"
-            android:layout_width="0dp"
-            android:layout_height="92dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/white"
-            android:elevation="8dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
+                <!-- List of Items -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_view_queimadas"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintBottom_toTopOf="@id/extra_space_view"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/header" />
 
-            <!-- Notification Icon -->
-            <ImageView
-                android:id="@+id/notification_icon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginStart="16dp"
-                android:src="@drawable/ic_notification"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"/>
+                <!-- View at the bottom to create extra space -->
+                <View
+                    android:id="@+id/extra_space_view"
+                    android:layout_width="0dp"
+                    android:layout_height="80dp"
+                    app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
 
-            <!-- Fire Icon (Center) -->
-            <ImageView
-                android:id="@+id/fire_icon"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_fire"
-                android:layout_centerInParent="true"/>
+                <!-- Bottom Navigation -->
+                <RelativeLayout
+                    android:id="@+id/bottom_navigation"
+                    android:layout_width="0dp"
+                    android:layout_height="92dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/white"
+                    android:elevation="8dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent">
 
-            <!-- Profile Icon -->
-            <ImageView
-                android:id="@+id/profile_icon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginEnd="16dp"
-                android:src="@drawable/ic_profile"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"/>
-        </RelativeLayout>
+                    <!-- Notification Icon -->
+                    <ImageView
+                        android:id="@+id/notification_icon"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="16dp"
+                        android:src="@drawable/ic_notification" />
 
-        <!-- Floating Action Button -->
-        <ImageView
-            android:id="@+id/fab"
-            android:layout_width="59dp"
-            android:layout_height="59dp"
-            android:layout_above="@id/bottom_navigation"
-            android:layout_alignParentEnd="true"
-            android:layout_margin="16dp"
-            android:layout_marginBottom="24dp"
-            android:src="@drawable/addchama"
-            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-            app:layout_constraintEnd_toEndOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <!-- Fire Icon (Center) -->
+                    <ImageView
+                        android:id="@+id/fire_icon"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_fire" />
 
-    <!-- Navigation Drawer -->
+                    <!-- Profile Icon -->
+                    <ImageView
+                        android:id="@+id/profile_icon"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="16dp"
+                        android:src="@drawable/ic_profile" />
+                </RelativeLayout>
+
+                <!-- Floating Action Button -->
+                <ImageView
+                    android:id="@+id/fab"
+                    android:layout_width="59dp"
+                    android:layout_height="59dp"
+                    android:layout_above="@id/bottom_navigation"
+                    android:layout_alignParentEnd="true"
+                    android:layout_margin="16dp"
+                    android:layout_marginBottom="24dp"
+                    android:src="@drawable/addchama"
+                    app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+                    app:layout_constraintEnd_toEndOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+    </ScrollView>
+
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
@@ -148,5 +159,7 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:menu="@menu/drawer_menu" />
+
+    <!-- Navigation Drawer -->
 
 </androidx.drawerlayout.widget.DrawerLayout>
