--- a/app/src/main/res/layout-land/activity_notificacoes_user.xml
+++ b/app/src/main/res/layout-land/activity_notificacoes_user.xml
@@ -9,94 +9,105 @@
     tools:openDrawer="start">
 
     <!-- Content Frame -->
-    <RelativeLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Header with gradient background -->
-        <RelativeLayout
-            android:id="@+id/header"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="113dp"
-            android:background="@drawable/tab"
-            android:padding="16dp">
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
 
-            <!-- User Profile Picture -->
-            <ImageView
-                android:id="@+id/profile_picture"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="22dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/profile"
-                android:clipToOutline="true"
-                android:scaleType="centerCrop"
-                android:src="@drawable/profile" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <!-- Menu Icon -->
-            <ImageView
-                android:id="@+id/menu_icon"
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="40dp"
-                android:src="@drawable/menu"/>
-        </RelativeLayout>
+                <!-- Header with gradient background -->
+                <RelativeLayout
+                    android:id="@+id/header"
+                    android:layout_width="match_parent"
+                    android:layout_height="113dp"
+                    android:background="@drawable/tab"
+                    android:padding="16dp">
 
-        <!-- List of Items -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_queimadas"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="110dp"
-            android:layout_marginBottom="90dp"
-            app:layout_constraintTop_toBottomOf="@id/header"
-            app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+                    <!-- User Profile Picture -->
+                    <ImageView
+                        android:id="@+id/profile_picture"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginEnd="22dp"
+                        android:layout_marginBottom="8dp"
+                        android:background="@drawable/profile"
+                        android:clipToOutline="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/profile" />
 
-        <!-- Bottom Navigation -->
-        <RelativeLayout
-            android:id="@+id/bottom_navigation"
-            android:layout_width="match_parent"
-            android:layout_height="92dp"
-            android:layout_alignParentBottom="true"
-            android:background="@color/white"
-            android:elevation="8dp"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp">
+                    <!-- Menu Icon -->
+                    <ImageView
+                        android:id="@+id/menu_icon"
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="40dp"
+                        android:src="@drawable/menu" />
+                </RelativeLayout>
 
-            <!-- Notification Icon -->
-            <ImageView
-                android:id="@+id/notification_icon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_alignParentStart="true"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="16dp"
-                android:src="@drawable/ic_notification1" />
+                <!-- List of Items -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_view_queimadas"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="110dp"
+                    android:layout_marginBottom="90dp"
+                    app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/header" />
 
-            <!-- Fire Icon (Center) -->
-            <ImageView
-                android:id="@+id/fire_icon"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:layout_centerInParent="true"
-                android:src="@drawable/ic_fire1" />
+                <!-- Bottom Navigation -->
+                <RelativeLayout
+                    android:id="@+id/bottom_navigation"
+                    android:layout_width="match_parent"
+                    android:layout_height="92dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="@color/white"
+                    android:elevation="8dp"
+                    android:paddingTop="8dp"
+                    android:paddingBottom="8dp">
 
-            <!-- Profile Icon -->
-            <ImageView
-                android:id="@+id/profile_icon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:layout_marginEnd="16dp"
-                android:src="@drawable/ic_profile" />
-        </RelativeLayout>
-    </RelativeLayout>
+                    <!-- Notification Icon -->
+                    <ImageView
+                        android:id="@+id/notification_icon"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="16dp"
+                        android:src="@drawable/ic_notification1" />
+
+                    <!-- Fire Icon (Center) -->
+                    <ImageView
+                        android:id="@+id/fire_icon"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_centerInParent="true"
+                        android:src="@drawable/ic_fire1" />
+
+                    <!-- Profile Icon -->
+                    <ImageView
+                        android:id="@+id/profile_icon"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginEnd="16dp"
+                        android:src="@drawable/ic_profile" />
+                </RelativeLayout>
+            </RelativeLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <!-- Navigation Drawer -->
     <com.google.android.material.navigation.NavigationView
