--- a/app/src/main/res/layout-land/activity_slide3.xml
+++ b/app/src/main/res/layout-land/activity_slide3.xml
@@ -5,106 +5,115 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/background_linear"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteX="121dp"
-        tools:layout_editor_absoluteY="-79dp">
-
-        <!-- Adicione aqui os elementos do seu layout -->
-        <ImageView
-            android:layout_width="255dp"
-            android:layout_height="245dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="38dp"
-            android:layout_marginBottom="35dp"
-            android:src="@drawable/logo" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="25sp"
-            android:text="Em caso de incendio ou perda do "
-            android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="controlo da queimada, por favor,"
-            android:textSize="25sp"
-            android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="contacte as autoridades"
-            android:textSize="25sp"
-            android:textColor="@android:color/black"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="45dp"/>
-
-        <Button
-            android:id="@+id/button1"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="15dp"
-            android:drawableEnd="@drawable/seta"
-            android:drawablePadding="8dp"
-            android:text="Entrar"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/white"
-            tools:ignore="RtlCompat" />
-
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="50dp"
-            android:background="@drawable/button_background2"
-            android:drawableEnd="@drawable/seta"
-            android:drawablePadding="8dp"
-            android:text="Registar"
-            android:textAlignment="textStart"
-            android:textColor="@android:color/white"
-            tools:ignore="RtlCompat" />
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:orientation="vertical" >
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ball_white"
-                android:layout_margin="20dp"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/background_linear"
+                android:orientation="vertical">
 
-            <!-- Bola cinza 2 -->
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ball_white"
-                android:layout_margin="20dp"/>
+                <!-- Adicione aqui os elementos do seu layout -->
+                <ImageView
+                    android:layout_width="255dp"
+                    android:layout_height="245dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="38dp"
+                    android:layout_marginBottom="35dp"
+                    android:src="@drawable/logo" />
 
-            <!-- Bola preta -->
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ball_black"
-                android:layout_margin="20dp"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="Em caso de incendio ou perda do "
+                    android:textColor="@android:color/black"
+                    android:textSize="25sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="controlo da queimada, por favor,"
+                    android:textColor="@android:color/black"
+                    android:textSize="25sp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginBottom="45dp"
+                    android:text="contacte as autoridades"
+                    android:textColor="@android:color/black"
+                    android:textSize="25sp" />
+
+                <Button
+                    android:id="@+id/button1"
+                    android:layout_width="200dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="15dp"
+                    android:drawableEnd="@drawable/seta"
+                    android:drawablePadding="8dp"
+                    android:text="Entrar"
+                    android:textAlignment="textStart"
+                    android:textColor="@android:color/white"
+                    tools:ignore="RtlCompat" />
+
+                <Button
+                    android:id="@+id/button2"
+                    android:layout_width="200dp"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="50dp"
+                    android:background="@drawable/button_background2"
+                    android:drawableEnd="@drawable/seta"
+                    android:drawablePadding="8dp"
+                    android:text="Registar"
+                    android:textAlignment="textStart"
+                    android:textColor="@android:color/white"
+                    tools:ignore="RtlCompat" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_margin="20dp"
+                        android:src="@drawable/ball_white" />
+
+                    <!-- Bola cinza 2 -->
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_margin="20dp"
+                        android:src="@drawable/ball_white" />
+
+                    <!-- Bola preta -->
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_margin="20dp"
+                        android:src="@drawable/ball_black" />
+                </LinearLayout>
+
+            </LinearLayout>
         </LinearLayout>
-
-    </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
