Alteração do icon da app

--- a/app/src/main/res/layout/activity_home_page_user.xml
+++ b/app/src/main/res/layout/activity_home_page_user.xml
@@ -52,15 +52,15 @@
                 android:id="@+id/greeting_message"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Boas {First/Last Name},"
+                android:text="Hello {First/Last Name},"
                 android:textAlignment="center"
                 android:textColor="@android:color/white"
                 android:textSize="40sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/menu_icon"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintVertical_bias="0.5"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/menu_icon"
+                app:layout_constraintVertical_bias="0.5" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!-- List of Items -->
